--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ body {
     margin: 0;
     padding: 0;
     /* height: 100vh; */
+    position: relative;
+    z-index: 1;
 }
 
 canvas {
@@ -18,8 +20,7 @@ canvas {
     border-radius: 15px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     /* margin: 20px; */
-    position: relative;
-    z-index: 1;
+
 }
 
 .card {
@@ -29,7 +30,7 @@ canvas {
     width: 20rem;
     padding: 10px;
     position: absolute;
-    bottom: 20px;
+    bottom: -90px;
     left: 20px;
     z-index: 2;
     font-size: 1rem;
@@ -56,4 +57,7 @@ canvas {
     font-size: 2rem;
     font-weight: bold;
     color: #007bff;
+}
+img {
+    max-width: 40px;
 }
